added more html and css just some svg and font style needed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="assets/pexels-fauxels-3184325.jpg" alt="">
         </div>
         <div class="container2">
-            <h1>We have made your care easy for you</h1>
+            <h1 class="container2-heading">We have made your care easy for you</h1>
             <div class="container21">
                 <div class="container21-left">
                     <h1>Effective Website Design and Development</h1>
@@ -75,11 +75,122 @@
                     <button class="lets-talk">Let's Talk</button>
                 </div>
                 <div class="container21-right">
-                    <img src="/assets/pexels-fauxels-3184405.jpg" alt="">
+                    <img src="/assets/pexels-fauxels-3184405.jpg" alt="" class="container-img">
                 </div>
             </div>
         </div>
+        <div class="container3">
+            <div class="container3-right">
+                <img src="/assets/pexels-fauxels-3184603.jpg" class="container-img" alt="">
+            </div>
+            <div class="container3-left">
+                <h1>We Give Proven Digital Marketing Strategies for Our Clients</h1>
+                <p>Consultant working hard and we collaborate with
+                    organizations that are keen transform the legal industry.
+                    reach their goals and pursue their dreams.
+                </p>
+                <button class="lets-talk">Let's Talk</button>
+            </div>
+        </div>
+        <div class="container2">
+            <div class="container21">
+                <div class="container21-left">
+                    <h1>People Will Always Judge the book by it's cover.</h1>
+                    <p>By connecting patients all over the world to the best
+                        instructors, Healthycare helping individuals reach their
+                        goals and purse their dreams.
+                    </p>
+                    <button class="lets-talk">Let's Talk</button>
+                </div>
+                <div class="container21-right">
+                    <img src="/assets/pexels-linkedin-sales-navigator-2182969.jpg" alt=""
+                        class="container-img-linkedin">
+                </div>
+            </div>
+        </div>
+        <div class="container4">
+            <div class="container41">
+                <h1>Meets our great Creative Teams</h1>
+                <p>Our journey began with a simple idea make a simple journey make this world
+                    more function. We Collaborate with organizations that are keen transform
+                </p>
+            </div>
+            <div class="container42">
+                <div class="container421">
+                    <img src="/assets/pexels-mikhail-nilov-8937870.jpg" id="amanda" alt="">
+                    <h4>Amera Amanda</h4>
+                    <p>Introduction start procrasninate 2 hours get to do work get to do work while eating</p>
+                </div>
+                <div class="container421">
+                    <img src="assets/pexels-precious-judah-9154594.jpg" alt="">
+                    <h4>Amera Amanda</h4>
+                    <p>Introduction start procrasninate 2 hours get to do work get to do work while eating</p>
+                </div>
+                <div class="container421">
+                    <img src="/assets/pexels-christina-morillo-1181424.jpg" alt="">
+                    <h4>Amera Amanda</h4>
+                    <p>Introduction start procrasninate 2 hours get to do work get to do work while eating</p>
+                </div>
+            </div>
+            <button class="lets-talk">See More</button>
+        </div>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="top-section">
+                <img src="assets/white-logo.png" alt="">
+                <img src="" alt="sda">
+            </div>
+            <hr>
+            <div class="bottom-section">
+                <ul>
+                    <li>
+                        <h4>Our Products</h4>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sales Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h4>Our Products</h4>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sales Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h4>Our Products</h4>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sales Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h4>Our Products</h4>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sales Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h4>Our Products</h4>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sales Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
