edited svg and added to html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="footer-container">
             <div class="top-section">
                 <img src="assets/white-logo.png" alt="">
-                <img src="" alt="sda">
+                <img src="assets/Business Landing Page.svg" alt="sda">
             </div>
             <hr>
             <div class="bottom-section">
