some change in image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <div class="hero-container">
             <div class="hero-left">
-                <img src="assets/pexels-fauxels-3183197.jpg" alt="" width="500px">
+                <img src="assets/pexels-fauxels-3183197.jpg" id="hero-img" alt="">
             </div>
             <div class="hero-right">
                 <h1>Enpowering your business with the best solution</h1>
